{
  "version": 4,
  "terraform_version": "1.16.4",
  "serial": 51,
  "lineage": "e99b6ee7-caec-2e30-fc68-c77389f28093",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node1_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2601fa32a0e773d",
            "arn": "arn:aws:ec2:us-east-1:569278272496:instance/i-033f07d4eb48f4544",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033f07d4eb48f4544",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-laboratorio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebf1bc807842723e",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-98-92-55-192.compute-1.amazonaws.com",
            "public_ip": "98.92.55.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ed875086baa82113",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e826eab8debdedb",
            "tags": {
              "Name": "lab-3tier-node1-proxy",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-node1-proxy",
              "Project": "lab-3tier-uni"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9e49c8181c46c23"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.node2_reservas",
            "aws_instance.node3_pasajeros",
            "aws_instance.node4_database",
            "aws_security_group.sg_database",
            "aws_security_group.sg_proxy",
            "aws_security_group.sg_services",
            "aws_subnet.az_a",
            "aws_subnet.az_b",
            "aws_vpc.lab",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node2_reservas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2601fa32a0e773d",
            "arn": "arn:aws:ec2:us-east-1:569278272496:instance/i-0f58e0a7c1347e7cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f58e0a7c1347e7cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-laboratorio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ffed6a65153f47fb",
            "private_dns": "ip-10-0-2-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-100-55-15-58.compute-1.amazonaws.com",
            "public_ip": "100.55.15.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-044218725fc4877fa",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0185ea173b1cf5a15",
            "tags": {
              "Name": "lab-3tier-node2-reservas",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-node2-reservas",
              "Project": "lab-3tier-uni"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b144056219876ad"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.node4_database",
            "aws_security_group.sg_database",
            "aws_security_group.sg_proxy",
            "aws_security_group.sg_services",
            "aws_subnet.az_b",
            "aws_vpc.lab",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node3_pasajeros",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2601fa32a0e773d",
            "arn": "arn:aws:ec2:us-east-1:569278272496:instance/i-00c02c407d73e6215",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c02c407d73e6215",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-laboratorio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c27c347b1aaae083",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-44-193-80-113.compute-1.amazonaws.com",
            "public_ip": "44.193.80.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a37cadb520dbe537",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e826eab8debdedb",
            "tags": {
              "Name": "lab-3tier-node3-pasajeros",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-node3-pasajeros",
              "Project": "lab-3tier-uni"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b144056219876ad"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.node4_database",
            "aws_security_group.sg_database",
            "aws_security_group.sg_proxy",
            "aws_security_group.sg_services",
            "aws_subnet.az_a",
            "aws_subnet.az_b",
            "aws_vpc.lab",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node4_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2601fa32a0e773d",
            "arn": "arn:aws:ec2:us-east-1:569278272496:instance/i-0cd50386c8211fe98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd50386c8211fe98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-laboratorio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09bbf828d5490a719",
            "private_dns": "ip-10-0-2-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-3-83-3-47.compute-1.amazonaws.com",
            "public_ip": "3.83.3.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00348c63e83452c4a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0185ea173b1cf5a15",
            "tags": {
              "Name": "lab-3tier-node4-database",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-node4-database",
              "Project": "lab-3tier-uni"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071fc6f014c246d69"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_database",
            "aws_security_group.sg_proxy",
            "aws_security_group.sg_services",
            "aws_subnet.az_b",
            "aws_vpc.lab",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:internet-gateway/igw-07f73b90bd7924d10",
            "id": "igw-07f73b90bd7924d10",
            "owner_id": "569278272496",
            "tags": {
              "Name": "lab-3tier-igw",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-igw",
              "Project": "lab-3tier-uni"
            },
            "vpc_id": "vpc-05f78141f2ca09a34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:route-table/rtb-0e9aa2e9176727541",
            "id": "rtb-0e9aa2e9176727541",
            "owner_id": "569278272496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f73b90bd7924d10",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-3tier-rt",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-rt",
              "Project": "lab-3tier-uni"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f78141f2ca09a34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7b1fb66258ba799",
            "route_table_id": "rtb-0e9aa2e9176727541",
            "subnet_id": "subnet-07e826eab8debdedb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.az_a",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a428de3b495fb7ae",
            "route_table_id": "rtb-0e9aa2e9176727541",
            "subnet_id": "subnet-0185ea173b1cf5a15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.az_b",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:security-group/sg-071fc6f014c246d69",
            "description": "Permite PostgreSQL :5432 solo desde los servicios Flask",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071fc6f014c246d69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "5432 solo desde sg-services",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b144056219876ad"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "lab-3tier-sg-database",
            "name_prefix": "",
            "owner_id": "569278272496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-3tier-sg-database",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-sg-database",
              "Project": "lab-3tier-uni"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f78141f2ca09a34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_proxy",
            "aws_security_group.sg_services",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:security-group/sg-0e9e49c8181c46c23",
            "description": "Permite HTTP publico hacia el proxy nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9e49c8181c46c23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP publico",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-3tier-sg-proxy",
            "name_prefix": "",
            "owner_id": "569278272496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-3tier-sg-proxy",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-sg-proxy",
              "Project": "lab-3tier-uni"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f78141f2ca09a34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:security-group/sg-04b144056219876ad",
            "description": "Permite :8080 solo desde el proxy nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b144056219876ad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "8080 solo desde sg-proxy",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e9e49c8181c46c23"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "lab-3tier-sg-services",
            "name_prefix": "",
            "owner_id": "569278272496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-3tier-sg-services",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-sg-services",
              "Project": "lab-3tier-uni"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f78141f2ca09a34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_proxy",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:subnet/subnet-07e826eab8debdedb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e826eab8debdedb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569278272496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-3tier-subnet-az-a",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-subnet-az-a",
              "Project": "lab-3tier-uni"
            },
            "vpc_id": "vpc-05f78141f2ca09a34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:subnet/subnet-0185ea173b1cf5a15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0185ea173b1cf5a15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569278272496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-3tier-subnet-az-b",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-subnet-az-b",
              "Project": "lab-3tier-uni"
            },
            "vpc_id": "vpc-05f78141f2ca09a34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569278272496:vpc/vpc-05f78141f2ca09a34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0737e70673c5b4606",
            "default_route_table_id": "rtb-0e046ac914e4c3728",
            "default_security_group_id": "sg-0617475d7848217a6",
            "dhcp_options_id": "dopt-0e7448ec21b99b051",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f78141f2ca09a34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e046ac914e4c3728",
            "owner_id": "569278272496",
            "tags": {
              "Name": "lab-3tier-vpc",
              "Project": "lab-3tier-uni"
            },
            "tags_all": {
              "Name": "lab-3tier-vpc",
              "Project": "lab-3tier-uni"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}